# pyfarm-dashboard

./: pyproject.toml  server.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: ActuatorToggle.tsx  EventBadge.tsx  NavBar.tsx  StatusCard.tsx
frontend/src/pages/: Dashboard.tsx  Events.tsx  Login.tsx
