[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyfarm-dashboard"
version = "0.1.0"
description = "Web dashboard for pyfarm control system"
requires-python = ">=3.10"
dependencies = [
    "pyfarm-config>=0.1.0",
    "fastapi>=0.103,<1.0",
    "uvicorn[standard]>=0.20,<0.21",
    "httpx>=0.23,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "httpx",
]

[project.scripts]
pyfarm-dashboard = "pyfarm_dashboard.server:main"

[tool.setuptools.packages.find]
where = ["."]
